refactor(judge-commons):重构 Java 代码生成逻辑
- 重新设计了 JSON 导向的 Java 代码生成器
- 增加了类型安全性和代码可读性
- 优化了测试用例执行和结果比较逻辑
- 改进了错误处理和结果输出格式
- 重构了代码结构，提高了可维护性